<resources>
    <string name="app_name">AccountManager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="chosen_password_label">Password:</string>

    <string name="add_account_text">Add Account</string>
    <string name="add_button_text">Add Account</string>

    <string name="account_name_hint">Account Name</string>
    <string name="account_user_name">Username</string>
    <string name="account_password">Password</string>

    <string name="edit_account_text">Edit Account</string>
    <string name="edit_button_text">Save Changes</string>

    <string name="delete_button_text">Delete Account</string>
</resources>