<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.EditAccountFragment"
    android:background="@color/edit_account">

    <TextView
        android:id="@+id/textView"
        android:layout_width="213dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/edit_account_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <EditText
        android:id="@+id/edit_account_name"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/account_name_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.112" />

    <EditText
        android:id="@+id/edit_account_username"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginBottom="372dp"
        android:ems="10"
        android:hint="@string/account_user_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_account_name"
        app:layout_constraintVertical_bias="0.911" />

    <EditText
        android:id="@+id/edit_account_password"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginBottom="272dp"
        android:ems="10"
        android:hint="@string/account_password"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_account_username"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/edit_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/edit_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_account_password"
        app:layout_constraintVertical_bias="0.941" />

    <Button
        android:id="@+id/delete_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_account_button"
        app:layout_constraintVertical_bias="0.746" />
</androidx.constraintlayout.widget.ConstraintLayout>